# auto-grbas

./: .gitignore  3rd-party-licenses.md  LICENSE  README.md  pyproject.toml
Supplementary_Programs/: README.md  acfeatures.praat  acfeatures.py  acfeatures_praat.csv  acfeatures_python.csv  requirements.txt
Supplementary_Programs/sample_audio_preprocessed/: hidaka_breathy.Sound  hidaka_normal.Sound  hidaka_rough.Sound  hidaka_strained.Sound
data/: meta.csv
notebooks/: data.ipynb  frontend.ipynb
shell/: sample.sh
src/: main.py
src/models/: __init__.py  metrics.py  module.py  train.py
src/models/data/: __init__.py  dataset.py  transforms.py
src/models/dldl/: __init__.py  functional.py
src/models/nn/: __init__.py  models.py  varlen.py
src/models/nn/encoder/: crnn.py  efficientnet.py  encoder.py  rnn.py
src/models/nn/frontend/: __init__.py  frontend.py  specaug.py
src/models/nn/frontend/mel/: __init__.py  compressor.py  mel.py
src/models/nn/head/: __init__.py  head.py
tests/: test_metrics.py  test_nn.py
