[tool.poetry]
name = "auto-grbas"
version = "0.1.0"
description = ""
authors = ["Shunsuke Hidaka <gsus4onc@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
h5py = "^3.6.0"
jupyterlab = "^3.4.2"
librosa = "^0.9.1"
matplotlib = "^3.5.1"
numpy = ">=1.18,<1.22"
numba = "^0.55.1"
pandas = "^1.4.2"
pytorch-lightning = "^1.6.3"
timm = "^0.5.4"
PyYAML = "^6.0"
torch = "^1.11.0"
torchaudio = "^0.11.0"
krippendorff = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
